<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp">

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="@dimen/_80dp"
                android:layout_height="@dimen/_80dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/_10dp"
                android:src="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/ivPhoto"
                android:hint="@string/product_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_toEndOf="@id/ivPhoto"
                android:hint="@string/product_desc"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/tv_salePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_desc"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_toEndOf="@id/ivPhoto"
                android:hint="@string/product_salePrice"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/tv_regPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_desc"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_toEndOf="@id/tv_salePrice"
                android:hint="@string/product_regPrice"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/_15sp" />

            <ImageView
                android:id="@+id/addProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_desc"
                android:src="@android:drawable/ic_input_add"
                />

            <LinearLayout
                android:id="@+id/ll_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_margin="@dimen/_10dp"
                android:orientation="horizontal"
                android:layout_below="@id/tv_salePrice"
                android:layout_toEndOf="@+id/ivPhoto"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>